--- a/TITANIC_Data1.ipynb
+++ b/TITANIC_Data1.ipynb
@@ -26,7 +26,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
